# tuono

./: .editorconfig  .gitignore  .prettierignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tmp  tsconfig.json  turbo.json
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/actions/check-jobs-result/: action.yml
.github/workflows/: ci-documentation.yml  deploy-documentation.yml  docker-ci.yml  documentation-ci.yml  documentation-deploy.yml  e2e-ci.yml  examples-ci.yml  pr-labeler.yml  pr-title-checker.yml  repo-root-ci.yml  rust-ci.yml  rust.yml  spell-checking.yml  typescript-ci.yml  typescript.yml
.tuono/: main.rs
apps/documentation/: .env.production  CONTRIBUTING.md  Cargo.toml  README.md  package.json  tuono.config.ts
apps/documentation/src/: env.d.ts
apps/documentation/src/components/Breadcrumbs/: Breadcrumbs.tsx
apps/documentation/src/components/EditPage/: EditPage.tsx
apps/documentation/src/routes/: __layout.tsx  __root.tsx  index.mdx  sitemap.xml.rs
crates/tuono/: .env  .env.test  Cargo.toml
crates/tuono/src/: app.rs  build.rs  cli.rs  env.rs  externalUrl.rs  lib.rs  main.rs  mode.rs  process_manager.rs  route.rs  scaffold_project.rs  source_builder.rs  symbols.rs  url.rs  watch.rs
crates/tuono/src/commands/: build.rs  dev.rs  new.rs
crates/tuono/src/typescript/: file_types.rs  mod.rs  parser.rs  types_jar.rs  utils.rs
crates/tuono/src/typescript/parser/: mod.rs  parse_enum.rs  parse_struct.rs  utils.rs
crates/tuono/templates/: client.ts  fallback.html  fallback_index.html  router.rs  server.rs  server_entry.ts  tuono_main.rs
crates/tuono/tests/: cli_build.rs  cli_new.rs  cli_tests.rs  utils.rs
crates/tuono/tests/utils/: mock_github_endpoint.rs  mod.rs  temp_tuono_project.rs
crates/tuono_internal/: Cargo.toml  README.md
crates/tuono_internal/src/: config.rs  lib.rs  tuono_println.rs
crates/tuono_internal/tests/: config.rs  utils.rs
crates/tuono_lib/: Cargo.toml
crates/tuono_lib/src/: catch_all.rs  config.rs  env.rs  lib.rs  manifest.rs  payload.rs  request.rs  response.rs  server.rs  ssr.rs  vite_reverse_proxy.rs  vite_websocket_proxy.rs
crates/tuono_lib/src/services/: logger.rs
crates/tuono_lib/src/vite/: mod.rs  reverse_proxy.rs  websocket_proxy.rs
crates/tuono_lib/tests/: env.rs  server.rs  server_test.rs  utils.rs
crates/tuono_lib/tests/assets/: .env  fake_react_build.js
crates/tuono_lib/tests/utils/: catch_all.rs  dynamic_parameter.rs  env.rs  form_data.rs  health_check.rs  mock_server.rs  mod.rs  post_api.rs  route.rs  utils.rs
crates/tuono_lib_macros/: Cargo.toml
crates/tuono_lib_macros/src/: api.rs  axum_argument.rs  handler.rs  lib.rs  utils.rs
crates/tuono_lib_macros/tests/: api.rs  handler.rs  macro_test.rs
crates/tuono_lib_macros/tests/api/: api_with_complex_args.expanded.rs  api_with_complex_args.rs  api_with_state.expanded.rs  api_with_state.rs  empty_api.expanded.rs  empty_api.rs
crates/tuono_lib_macros/tests/handler/: empty_handler.expanded.rs  empty_handler.rs  handler_with_multi_args_request.expanded.rs  handler_with_multi_args_request.rs  handler_with_request.expanded.rs  handler_with_request.rs
devtools/vite-config/: package.json  tsconfig.json
devtools/vite-config/src/: index.ts
docker/: .dockerignore  Dockerfile  compose.yml
e2e/: e2e-test-setup.js  playwright.config.ts
e2e/fixtures/base/: .gitignore  Cargo.toml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
e2e/fixtures/base/tests/: e2e.spec.ts
e2e/tests/: e2e.spec.ts
examples/: README.md
examples/routing-sample/: Cargo.toml  README.md  package-lock.json
examples/routing-sample/src/routes/: index.rs  index.tsx
examples/tuono-app/: .env  Cargo.toml  README.md  package.json  tsconfig.json
examples/tuono-app/src/routes/: __layout.tsx  __root.tsx  index.rs  index.tsx
examples/tuono-tutorial/: Cargo.toml  README.md  package.json  tsconfig.json  tuono.config.ts
examples/tuono-tutorial/src/: app.rs
examples/tuono-tutorial/src/components/: PokemonImage.tsx  PokemonLink.tsx  PokemonView.module.css  PokemonView.tsx
examples/tuono-tutorial/src/models/: Pokemon.ts
examples/tuono-tutorial/src/routes/: __layout.tsx  __root.tsx  index.rs  index.tsx
examples/tuono-tutorial/src/styles/: global.css
examples/with-mdx/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
examples/with-mdx/src/routes/: __layout.tsx  __root.tsx
examples/with-tailwind/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  tuono.config.ts
examples/with-tailwind/src/routes/: __layout.tsx  index.tsx
scripts/: dev.sh
(+81 files in other folders)
