[package]
name = "tuono"
version = "0.19.7"
edition = "2024"
authors = ["V. Ageno <valerioageno@yahoo.it>"]
description = "Superfast React fullstack framework"
homepage = "https://tuono.dev"
keywords = ["react", "typescript", "fullstack", "web", "ssr"]
repository = "https://github.com/tuono-labs/tuono"
readme = "../../README.md"
license-file = "../../LICENSE.md"
categories = ["web-programming"]
include = ["src/**/*.rs", "templates/*", "Cargo.toml"]

[lib]
name = "tuono"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
syn = { version = "2.0.100", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
miette = "7.2.0"

colored = "2.1.0"
once_cell = "1.19.0"
watchexec = "5.0.0"
watchexec-signals = "4.0.0"
watchexec-events = "4.0.0"
watchexec-supervisor = "3.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
glob = "0.3.1"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde_json = "1.0"
fs_extra = "1.3.0"
http = "1.1.0"
tuono_internal = {path = "../tuono_internal", version = "0.19.7"}
spinners = "4.1.1"
console = "0.16.0"
convert_case = "0.8.0"

[dev-dependencies]
wiremock = "0.6.2"
tempfile = "3.14.0"
assert_cmd = "2.0.16"
serial_test = "3.0.0"

