[package]
name = "tuono_lib"
version = "0.19.6"
edition = "2024"
authors = ["V. Ageno <valerioageno@yahoo.it>"]
description = "Superfast React fullstack framework"
homepage = "https://tuono.dev"
keywords = [ "react", "typescript", "fullstack", "web", "ssr"]
repository = "https://github.com/tuono-labs/tuono"
readme = "../../README.md"
license-file = "../../LICENSE.md"
categories = ["web-programming"]
include = [
    "src/**/*.rs",
		"Cargo.toml"
]


[dependencies]
ssr_rs = "0.8.3"
axum = {version = "0.8.1", features = ["json", "ws"]}
axum-extra = {version = "0.10.0", features = ["cookie"]}
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.202", features = ["derive"] }
erased-serde = "0.4.5"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
reqwest = {version = "0.12.4", features = ["json", "stream"]}
once_cell = "1.19.0"
regex = "1.10.5"
either = "1.13.0"
tower-http = {version = "0.6.0", features = ["fs"]}
colored = "3.0.0"

tuono_lib_macros = {path = "../tuono_lib_macros", version = "0.19.6"}
tuono_internal = {path = "../tuono_internal", version = "0.19.6"}
# Match the same version used by axum
tokio-tungstenite = "0.26.0"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tungstenite = "0.26.0"
http = "1.1.0"
pin-project = "1.1.7"
tower = "0.5.1"

[dev-dependencies]
fs_extra = "1.3.0"
tempfile = "3.14.0"
serial_test = "3.0.0"
